source/kustomize-config/base/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toodo
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: toodo
        image: gobuffalo/toodo
        ports:
        - name: http
          containerPort: 3000
