source/kustomize-config/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toodo
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
