source/kustomize-config/base/app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: toodo
spec:
  backend:
    serviceName: toodo
    servicePort: 80
